| Bug #7480 | Mysqld crash in ha_ndbcluster using Query Browser | ||
|---|---|---|---|
| Submitted: | 22 Dec 2004 13:22 | Modified: | 3 Jan 2005 13:01 |
| Reporter: | Johan Andersson | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S1 (Critical) |
| Version: | mysql 4.1.x | OS: | Any (*) |
| Assigned to: | Martin Skold | Target Version: | |
[22 Dec 2004 13:22]
Johan Andersson
[28 Dec 2004 13:20]
Martin Skold
Patch committed in ChangeSet 1.2153
