Fix for bug #7480  Mysqld crash in ha_ndbcluster using Query Browser