sql/ha_ndbcluster.h
@@ -229,7 +229,6 @@ class ha_ndbcluster: public handler
 
   NdbConnection *m_active_trans;
   NdbResultSet *m_active_cursor;
-  Ndb *m_ndb;
   void *m_table;
   void *m_table_info;
   char m_dbname[FN_HEADLEN];
@@ -257,6 +256,7 @@ class ha_ndbcluster: public handler
   uint32 blobs_buffer_size;
   uint dupkey;
 
+  Ndb *get_ndb();
   void set_rec_per_key();
   void records_update();
   void no_uncommitted_rows_execute_failure();
